# walli

./: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  errors.rs  lib.rs  main.rs  scheduler.rs  secrets.rs  tray.rs  wake.rs  wallpaper_setter.rs
src-tauri/src/commands/: collections.rs  control.rs  history.rs  mod.rs  settings.rs
src-tauri/src/db/: migrations.rs  mod.rs  queries.rs  tests.rs
src-tauri/src/sources/: apod.rs  bing.rs  http.rs  local.rs  mod.rs  pool.rs  unsplash.rs  wallhaven.rs
src/components/animate-ui/components/community/: flip-card.tsx
src/routes/popover/: Page.tsx
src/routes/popover/components/: CollectionSwitcher.tsx  Controls.tsx  CurrentCard.tsx  HistoryList.tsx
src/routes/settings/: Page.tsx
src/routes/settings/components/: ApiKeyInput.tsx  CollectionsEditor.tsx  IntervalPicker.tsx  SourceToggles.tsx
src/shared/: ipc.ts  types.ts
src/store/: settings.ts  wallpaper.ts
